FullQa New/src/objects/PVD_Accuracy__c.object
<CustomObject>
    <fields>
        <fullName>Act__c</fullName>
        <label>Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <formula>IF(Category__c =&quot;Budg&quot;, &quot;Target&quot;, IF(Category__c=&quot;Deal&quot;,&quot;Forecast&quot;,&quot;Booked&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Est__c</fullName>
        <label>Est</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <label>Opp Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targ_Deal__c</fullName>
        <label>Targ Deal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Targ__c</fullName>
        <label>Targ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>(Deprecated) PVD Accuracy</label>
    <nameField>
        <displayFormat>pvda{0000}</displayFormat>
        <label>PVD Accuracy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PVD Accuracy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>